# sphinx-touchbook

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish-authorguide.yml
docs/: accessibility.rst  conf.py  directives.rst  index.rst  intro.rst
docs/components/: tb-blank.rst  tb-choice.rst  tb-click.rst  tb-code.rst  tb-file.rst  tb-formula.rst  tb-group.rst  tb-match.rst  tb-micro-parsons.rst  tb-order.rst  tb-parsons.rst  tb-reveal.rst  tb-video.rst
src/sphinx_touchbook/: __init__.py  nodes.py  transforms.py
src/sphinx_touchbook/directives/: __init__.py  blank.py  choice.py  click.py  code.py  common.py  file.py  formula.py  match.py  micro_parsons.py  order.py  parsons.py  reveal.py  tabs.py  video.py
src/sphinx_touchbook/generators/: __init__.py  blank.py  choice.py  click.py  code.py  file.py  formula.py  match.py  micro_parsons.py  order.py  parsons.py  reveal.py  tabs.py  video.py
src/sphinx_touchbook/static/: tb-blank.css  tb-blank.js  tb-choice.css  (+24 more)
tests/: test_tb_blank.py  test_tb_choice.py  test_tb_click.py  test_tb_code.py  test_tb_file.py  test_tb_formula.py  test_tb_group.py  test_tb_match.py  test_tb_micro_parsons.py  test_tb_order.py  test_tb_parsons.py  test_tb_reveal.py  test_tb_video.py
tests/web-components/: helpers.js  tb-blank.test.js  tb-choice.test.js  tb-click.test.js  tb-code.test.js  tb-file.test.js  tb-formula.test.js  tb-group-focus.test.js  tb-group.test.js  tb-match.test.js  tb-micro-parsons.test.js  tb-order.test.js  tb-parsons.test.js  tb-reveal.test.js  tb-video.test.js
